[gd_scene load_steps=8 format=3 uid="uid://cveytbhngs47s"]

[ext_resource type="Texture2D" uid="uid://byvoyu5r3lfxn" path="res://Art/ElevatorOpen.png" id="1_ym2or"]
[ext_resource type="Script" path="res://Scripts/Elevator.gd" id="2_nhjnr"]
[ext_resource type="Texture2D" uid="uid://qefo2eaojtou" path="res://Art/ElevatorBackground.png" id="3_2nvck"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lswfj"]
size = Vector2(121, 312)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_ltkns"]
a = Vector2(226, 297)
b = Vector2(-30, 293)

[sub_resource type="Animation" id="Animation_qlc63"]
resource_name = "level_down"
length = 30.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Blocker:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 30),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 1922)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rb1kc"]
_data = {
"level_down": SubResource("Animation_qlc63")
}

[node name="Elevator" type="Node2D"]

[node name="Elevator" type="Area2D" parent="."]
script = ExtResource("2_nhjnr")

[node name="TextureRect" type="TextureRect" parent="Elevator"]
z_index = 1
offset_right = 256.0
offset_bottom = 384.0
texture = ExtResource("1_ym2or")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Elevator"]
position = Vector2(127.5, 227)
shape = SubResource("RectangleShape2D_lswfj")

[node name="Blocker" type="StaticBody2D" parent="."]

[node name="TextureRect" type="TextureRect" parent="Blocker"]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("3_2nvck")

[node name="BucketCollision" type="CollisionPolygon2D" parent="Blocker"]
position = Vector2(30, 68)
polygon = PackedVector2Array(173, 4, 174, 300, 21, 298, 22, 9, 3, 9, -1, 314, 190, 316, 184, -4, 2, -6, 2, 3)
disabled = true

[node name="FloorCollision" type="CollisionShape2D" parent="Blocker"]
position = Vector2(30, 68)
shape = SubResource("SegmentShape2D_ltkns")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_rb1kc")
}

[connection signal="body_shape_entered" from="Elevator" to="Elevator" method="_on_body_shape_entered"]
[connection signal="body_shape_exited" from="Elevator" to="Elevator" method="_on_body_shape_exited"]
